Add css and header to page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
         <title>Lithosphere</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="index.css">
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     </head>
     <body>
+        <div id="header_wrapper">
+            <h1>lithosphere.</h1>
+        </div>
         <div id="example">
             <p>{{ hello }}</p>
         </div> 
@@ -20,6 +23,6 @@
                 el: '#example',
                 data: { hello: 'Hello World!' }
             })
-        </script> 
+        </script>
     </body>
 </html>
