--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
     <head>
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -10,14 +7,19 @@
         <title>Lithosphere</title>
         <!-- Libraries and Frameworks -->
         <link rel="stylesheet" href="./libraries/jquery-jvectormap-2.0.3.css" type="text/css" media="screen"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="./libraries/jquery.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="./libraries/jquery-jvectormap-2.0.3.min.js"></script>
         <script src="./libraries/jquery-jvectormap-world-mill.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js"></script>
         <!-- Custom CSS/JS -->
         <link rel="stylesheet" href="index.css">
         <script src="index.js"></script>
     </head>
+
     <body>
         <div id="main-wrapper">
             <div id="header-wrapper">
@@ -29,6 +31,15 @@
         </div>
         <div id="example">
             <p>{{ hello }}</p>
-        </div> 
+        </div>
+        <div id="options">
+            <div id="calendars">
+                <div class="calendar" id="datepicker-from"></div>
+                <div class="calendar" id="datepicker-to"></div>
+            </div>
+            <div id="sliders">
+                <input type="text" class="js-range-slider" name="magnitude-slider" value="" />
+            </div>
+        </div>
     </body>
 </html>
