Add options toggle

--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
                 <div id="world-map"></div>
             </div>
         </div>
-        <div id="example">
+        <div id="overlay"></div>
+        <!--<div id="example">
             <p>{{ hello }}</p>
-        </div>
-        <div id="options">
-            <div id="calendars">
-                <div class="calendar" id="datepicker-from"></div>
-                <div class="calendar" id="datepicker-to"></div>
-            </div>
-            <div id="sliders">
-                <input type="text" class="js-range-slider" name="magnitude-slider" value="" />
+        </div>-->
+        <div id="options-wrapper">
+            <button id="toggle-options">Options</button>
+            <div id="options">
+                <div id="calendars">
+                    <div class="calendar" id="datepicker-from"></div>
+                    <div class="calendar" id="datepicker-to"></div>
+                </div>
+                <div id="sliders">
+                    <input type="text" class="js-range-slider" name="magnitude-slider" value="" />
+                </div>
             </div>
         </div>
     </body>
