--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <div id="main-wrapper">
             <div id="header-wrapper">
-                    <img src="litho_logo.png" alt="logo">
+                    <img src="litho_logo.png" alt="logo" width="30%">
             </div>
             <div id="world-map-wrapper">
                 <div id="world-map"></div>
